# WarfaceBot

./: .editorconfig  .gitignore  README.md  Warface.sln
Warface/: AsyncEvent.cs  Utilities.cs  Warface.csproj  WarfaceClient.cs  WarfaceClientConfiguration.cs
Warface.Bot/: Program.cs  Warface.Bot.csproj
Warface.Native/: CMakeLists.txt
Warface.Native/include/: Crypto.h  DllMain.h  Types.h  WakeKey.h
Warface.Native/src/: Crypto.cpp  DllMain.cpp  WakeKey.cpp
Warface/Entities/Network/: PacketType.cs
Warface/EventArgs/: WarfaceClientEventArgs.cs
Warface/Security/Cryptography/: WarfaceCryptoApi.cs  WarfaceCryptoProvider.cs
